--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <div class="project__description">
                   <h3 class="project__description--title">Code4share</h3>
                   <h4 class="project__description--sub-title">
-                    HTML, CSS, JS, NODEJS, SOCKET.IO
+                    HTML, CSS, JS, NODEJS, SOCKET.IO, MONGODB
                   </h4>
                   <p class="project__description--para">
                     Share Code in Real-time, A online platform to sharing code.
